--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/bloog.css">
+
 </head>
 <body>
-    
+    <div class="my">
+        <h3>my first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur vero quis accusantium ipsa! Provident, eius eum ipsum vero modi assumenda vitae doloremque suscipit adipisci architecto iusto molestiae nam libero.</p>
+    </div>
 </body>
 </html>
