added others blog

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     <div class="my">
-        <h3>my first website</h3>
+        <h3>my first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur vero quis accusantium ipsa! Provident, eius eum ipsum vero modi assumenda vitae doloremque suscipit adipisci architecto iusto molestiae nam libero.</p>
+    </div>
+    <div class="my">
+        <h3>my second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur vero quis accusantium ipsa! Provident, eius eum ipsum vero modi assumenda vitae doloremque suscipit adipisci architecto iusto molestiae nam libero.</p>
+    </div>
+    <div class="my">
+        <h3>my third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur vero quis accusantium ipsa! Provident, eius eum ipsum vero modi assumenda vitae doloremque suscipit adipisci architecto iusto molestiae nam libero.</p>
     </div>
 </body>
