how to add blogs

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
         <h3>my third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur vero quis accusantium ipsa! Provident, eius eum ipsum vero modi assumenda vitae doloremque suscipit adipisci architecto iusto molestiae nam libero.</p>
     </div>
+    <div class="di">
+        <h3 id="how">how to push a new code</h3>
+        <ol class="ol">git add .</ol>
+        <ol class="ol">git commit -m"message"</ol>
+        <ol class="ol">git push</ol>
+    </div>
 </body>
 </html>
